<resources>
    <string name="app_name">CU Transit</string>

    <string name="search_hint">Search for bus stops</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_departures_available">There are currently no scheduled departures available at this location</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_route">RouteActivity</string>

    <string name="title_activity_directions">Directions</string>
    <string name="location_flipper_description">Flip Locations</string>
    <string name="gps_network_not_enabled">To use this feature, turn on location, which use\'s Google\'s location service</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="favorites_empty_text">Click the favorites icon on a bus stop to see them here</string>
    <string name="directions_empty_text">Add a starting and end point to view directions</string>
    <string name="near_me_empty_text">Pull down to refresh stops</string>
    <string name="dialog_question">How many minutes before arrival would you like to be notified?</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="button_rate">Rate</string>
    <string name="button_no_rate">No, thanks</string>
    <string name="button_remind_me_later">Later</string>
    <string name="button_dont_ask">Don’t ask again</string>
    <string name="swipe_to_dismiss">Swipe to dismiss</string>

    <string name="updated_departures">Departures updated</string>
    <string name="no_data_found">No departures found</string>
    <string name="dismiss">Dismiss</string>
    <string name="minutes">min</string>
    <string name="no_routes_found">No bus routes found at this time</string>
    <string name="directions_updated">Directions updated</string>
    <string name="mtd_error">Error with MTD data</string>
    <string name="route">Route</string>
    <string name="directions">Directions</string>
    <string name="arrives">arrives</string>
    <string name="until">until</string>

    <string name="near_me_fragment">Near Me</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="map_fragment">Map</string>
    <string name="stops">Stops</string>
    <string name="next_stop">Next Stop:</string>
    <string name="updated">Updated: </string>


    <string name="to">To</string>
    <string name="metric">Metric</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="release_notes">Release Notes</string>
    <string name="dark_mode_description">Click the settings button next to search to enable dark mode</string>
    <string name="dark_mode_title">Try the new dark mode!</string>
    <string name="bus_location">Bus location</string>
    <string name="version_3_0_2">Version 3.0.2</string>
    <string name="fixed_text_color_issues">-Fixed text color issues</string>
    <string name="added_status_bar">-Added status bar to display next stop on route page</string>
    <string name="fixed_issue_with_favorites">-Fixed issue with favorites not being imported from previous version</string>
    <string name="version_3_0">Version 3.0</string>
    <string name="new_features_and_bug_fixes">New features and bug fixes</string>
    <string name="click_the_3_dot_menu">Click the 3 dot menu button to change to dark mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reorder_favorites">Reorder favorites</string>
    <string name="click_and_drag_the_reorder_button">Click and drag the reorder button to move favorites</string>
    <string name="reorder_button">Reorder button:</string>
    <string name="istops">iStops</string>
    <string name="bus_routes_istops">See which bus routes are iStops when viewing departures</string>
    <string name="bug_fixes">Bug fixes</string>
    <string name="fixed_crashes">Updated stops, routes, and departures, and fixed crashes</string>
    <string name="email_your_feedback">If you have any issues, you can email your feedback to cutransitdeveloper@gmail.com. If you\'ve enjoyed the app, please leave a review!</string>
    <string name="feedback">Feedback</string>

    <string name="next_stop_tba">Next Stop: TBA</string>
</resources>

