<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:paddingLeft="24dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/version_3_0_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/fixed_text_color_issues"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/added_status_bar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/fixed_issue_with_favorites"
                android:paddingBottom="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/themeSoftTextColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/version_3_0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/new_features_and_bug_fixes"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/dark_mode"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/click_the_3_dot_menu"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/reorder_favorites"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/click_and_drag_the_reorder_button"
                android:paddingBottom="8dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="?attr/themeTextColor"
                    android:text="@string/reorder_button"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"/>
                <ImageView
                    android:id="@+id/handle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/ic_reorder" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textColor="?attr/themeTextColor"
                    android:text="@string/istops"/>
                <ImageView
                    android:id="@+id/iStop"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_i_stop" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/bus_routes_istops"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/bug_fixes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/fixed_crashes"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="?attr/themeTextColor"
                android:text="@string/feedback"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="?attr/themeTextColor"
                android:autoLink="email|web"
                android:text="@string/email_your_feedback"
                android:paddingBottom="8dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>