<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="?attr/themeBackgroundColor">

    <TextView
        android:id="@+id/dialog_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/dialog_question"
        android:textColor="@android:color/white" />

    <NumberPicker
        android:id="@+id/dialog_number_picker"
        android:layout_width="wrap_content"
        android:theme="@style/AppTheme.Picker"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/themeBackgroundColor"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="?attr/themeBackgroundColor">

        <Button
            android:id="@+id/dialog_set_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/themeBackgroundColor"
            android:elevation="0dp"
            android:shadowColor="@android:color/white"
            android:text="@string/dialog_set"
            android:textColor="?attr/themeDialogTextColor"/>

        <Button
            android:id="@+id/dialog_cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/themeBackgroundColor"
            android:elevation="0dp"
            android:shadowColor="@android:color/white"
            android:text="@string/dialog_cancel"
            android:textColor="?attr/themeDialogTextColor" />
    </LinearLayout>

</LinearLayout>